[gd_scene load_steps=6 format=3 uid="uid://dxt06ido0y1yp"]

[ext_resource type="Script" uid="uid://ddfq4qfb0paps" path="res://scripts/main_scene.gd" id="1_pu3yx"]
[ext_resource type="Texture2D" uid="uid://bmqdy6ydxv6wu" path="res://resources/ocean floor painting.jpg" id="2_gubc5"]
[ext_resource type="AudioStream" uid="uid://bt3dfcucr03op" path="res://resources/sounds/sfx-dink.wav" id="2_rt2n2"]
[ext_resource type="PackedScene" uid="uid://r2xo4ogsun5w" path="res://scenes/character.tscn" id="3_rt2n2"]
[ext_resource type="PackedScene" uid="uid://cbrel1cnnq22l" path="res://scenes/dialog_ui.tscn" id="4_c16ls"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_pu3yx")

[node name="NextSentenceSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_rt2n2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gubc5")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSprite" parent="CanvasLayer2/Control" instance=ExtResource("3_rt2n2")]
unique_name_in_owner = true
position = Vector2(0, 63)
scale = Vector2(0.75, 0.75)

[node name="DialogUI" parent="CanvasLayer2" instance=ExtResource("4_c16ls")]
unique_name_in_owner = true
